# project-for-the-YADRO

./: CMakeLists.txt  README.md
include/: Config.h  Sorter.h  Tape.h
src/: Config.cpp  Sorter.cpp  Tape.cpp  main.cpp
tests/: CMakeLists.txt  test_sort.cpp
